--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
         // Appliquer la couleur de fond aléatoire
         document.body.style.backgroundColor = getRandomColor();
     </script>
+
+    // Ajout du script répartition
+    <script src="repartition.js"></script>
+    
 </body>
 </html>
