--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button id="confirmButton" class="hidden">C'est moi !</button>
 
     <p id="timer" class="hidden"></p>
-    <button id="teamButton" class="hidden">Découvrir</button>
+    <button id="teamButton" class="hidden">Commencer</button>
 
     <script src="script.js"></script>
     
